# bevy_snake

./: Cargo.toml  README.md  Trunk.toml  build.rs  flake.nix  index.html
.cargo/: config.toml
assets_raw/: death_recording_raw.aup3  food_eat_recording.m4a
src/: main.rs
src/libs/: animation.rs  audio.rs  camera.rs  cell.rs  despawn.rs  events.rs  finish_menu.rs  food.rs  game_configuration.rs  game_states.rs  globals.rs  input.rs  mod.rs  particles.rs  pause.rs  schedule.rs  score.rs  snake.rs  start_menu.rs  utils.rs
src/libs/eatables/: eat_event.rs  food.rs
src/libs/eatables/powerups/: feast.rs  mod.rs  powerup.rs  shorten.rs  slowdown.rs
src/libs/food/: eat_event.rs  mod.rs
src/libs/food/powerups/: mod.rs  powerup.rs  shorten.rs
src/libs/input/: action_events.rs  direction.rs  mod.rs  read_input.rs
src/libs/ui/: finish_menu.rs  mod.rs  pause_ui.rs  score_ui.rs  snake_ui_plugin.rs  start_menu.rs  ui_utils.rs
