[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_particle_systems = "0.11.2"
rand = "0.8.5"
winit = { version = "0.28.7", default-features = false }

[dependencies.image]
version = "0.24"
default_features = false
features = ["png"]

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi-threaded",
    "vorbis",
    "webgl2",
    "x11",
    "wayland",
    "accesskit_unix",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[build-dependencies]
embed-resource = "1.4"
